--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,15 @@
-SQL_DATABASE=database
-SQL_USER=user
-SQL_PASSWORD=pwd
-SQL_ROOT_PASSWORD=pwdroot
+DOMAIN_NAME=mvan-pee.42.fr
+
+MYSQL_USER=mvan-pee
+MYSQL_PASSWORD=" "
+MYSQL_ROOT_PASSWORD=" "
+MYSQL_DATABASE=database
+
+WP_TITLE=Inception
+WP_ADMIN=mvan-pee
+WP_ADMIN_PASSWORD=" "
+WP_ADMIN_EMAIL=mvan-pee@student.42.fr
+
+WP_USER=buddy
+WP_USER_PASSWORD=buddy-password
+WP_USER_EMAIL=buddy@19.be
