fix and rm unwanted comment

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,13 @@
 DOMAIN_NAME=mvan-pee.42.fr
 
 MYSQL_USER=mvan-pee
-MYSQL_PASSWORD=" "
-MYSQL_ROOT_PASSWORD=" "
-MYSQL_DATABASE=database
+MYSQL_PASSWORD=244466666
+MYSQL_ROOT_PASSWORD=244466666
+MYSQL_DATABASE=wordpress
 
 WP_TITLE=Inception
 WP_ADMIN=mvan-pee
-WP_ADMIN_PASSWORD=" "
+WP_ADMIN_PASSWORD=244466666
 WP_ADMIN_EMAIL=mvan-pee@student.42.fr
 
 WP_USER=buddy
