--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -15,12 +15,20 @@ server {
 	}
 
 	location ~ \.php$ {
-		try_files					$uri =400;
-		fastcgi_split_path_info		^(.+\.php)(/.+)$;
-		fastcgi_pass				wordpress:9000;
-		fastcgi_index 				index.php;
-		fastcgi_param 				SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param				PATH_INFO $fastcgi_path_info;
-		include 					fastcgi_params;					
+		# Try to serve the file, or return a 400 error
+		try_files $uri =400;
+		# Splits the URL into script and path info
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		# Forwards the request to PHP-FPM on host 'wordpress' and port 9000
+		fastcgi_pass wordpress:9000;
+
+		fastcgi_index index.php;
+		# Defines the path to the script to be executed
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		# Passes the path info to the backend
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+		# Includes standard FastCGI parameters
+		include fastcgi_params;
 	}
+
 }
