--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,10 +1,8 @@
+;All default except listen = 9000
 [www]
-# Needed
-listen = 9000
-
-# Default in www.conf
 user = www-data
 group = www-data
+listen = 9000
 listen.owner = www-data
 listen.group = www-data
 pm = dynamic
